--- a/webPackage/css/SASS/settings/_settings.sass
+++ b/webPackage/css/SASS/settings/_settings.sass
@@ -1,4 +1,4 @@
-@import "_all-constants";
+@import "all-constants"
 
 // LAYOUT
   // THEME
@@ -27,38 +27,27 @@
 
 // -------------------------------------------------
 // ------------------------------------------ LAYOUT
-
   // --------------------------- THEME
-  
-  $theme: #enjoy-mondays;
-
+  $theme: #enjoy-mondays
 
   // ------------------------ MEASURES
-
   // HEADER
   // total heights will be adding 31px
-
-  $header_height: 20px; 
-
+  $header_height: 20px
 
   // HEADER under 350px:
-  
-  $header_height_2: 50px;
-
+  $header_height_2: 50px
 
   // LOGO
-
-  $logo_footer_width: 28px;
+  $logo_footer_width: 28px
 
 
 // -------------------------------------------------
 // ------------------------------------------ COLORS
-
   // ---------------------- BASE COLOR
   // can pick constant from colors/_colorConst.scss
 
-  $base_color: $LIGHT_GRAY;
-
+  $base_color: $LIGHT_GRAY
 
   // ------------------------- OPTIONS
 
@@ -66,84 +55,56 @@
   // true -> lighter version of base_color as main background color
   // false ->base_color as main background color
 
-  $lightBackground: false;
-
+  $lightBackground: false
 
   // ----------------- shadeCoeficient
   // tune grade of shades 
   // value between 0.0 and 2.0 
 
-  $shadeCoeficient: 1.55;
+  $shadeCoeficient: 1.55
 
 
   // ------------------------- COLOR 3
   // third color 
   // tune hue and saturation values to change color
 
-  $color3Hue: 270deg;
+  $color3Hue: 270deg
 
   // value between 0 and 85%
-  $color3Saturation: 80%;
-
+  $color3Saturation: 80%
 
 // -------------------------------------------------
 // ------------------------------------------- FONTS
 // can pick constants from fonts/_fontConst.scss
-  
   // -------------------------- FAMILY
-
   // LINKS AND TEXT
-  
-  $font_main: $TAHOMA, $TIMES, $COURIER;
-  
+  $font_main: $TAHOMA, $TIMES, $COURIER
 
   // HEADERS
-  
-  $font_headers: $CONSOLAS, $COURIER, $LUCIDA_CONSOLE;
-
+  $font_headers: $CONSOLAS, $COURIER, $LUCIDA_CONSOLE
 
   // P > CODE
-  
-  $font_code: $COURIER, $CONSOLAS;
-
+  $font_code: $COURIER, $CONSOLAS
 
   // ---------------------------- SIZE
-
   // TEXT, P
-  
-  $font_size_main: 1.25em; 
-  
+  $font_size_main: 1.25em
 
   // TEXT > PRE
-  
-  $font_size_code: 1.15em;
-  
+  $font_size_code: 1.15em
   
   // SIDE MENU LINKS
-  
-  $font_size_links: 1em;
-  
+  $font_size_links: 1em
   
   // H1 
-  
-  $font_size_big: 2.5em; 
-
-
+  $font_size_big: 2.5em
 
   // -------------------------- WEIGHT
-
   // TEXT, P
-  
-  $font_weight_main: $LIGHT;
-
+  $font_weight_main: $LIGHT
   
   // HEADERS
-
-  $font_weight_headers: $BOLD;
-
+  $font_weight_headers: $BOLD
 
   // LINKS
-
-  $font_weight_links: $BOLDER;
-
-
+  $font_weight_links: $BOLDER
