--- a/webPackage/css/style.css
+++ b/webPackage/css/style.css
@@ -213,4 +213,47 @@
   #enjoy-mondays .content pre {
     font-size: 1.15em; }
 
+#color-swapper {
+  display: none; }
+
+@media (min-width: 767px) {
+  #color-swapper {
+    display: initial;
+    left: 0;
+    padding: 5px; }
+    #color-swapper tr {
+      height: 15px;
+      overflow: hidden; }
+      #color-swapper tr:hover {
+        height: 12px;
+        cursor: pointer; }
+    #color-swapper td {
+      font-size: 0;
+      line-height: 0;
+      width: 27px;
+      border-right: 1px solid white; }
+      #color-swapper td a {
+        width: 27px;
+        height: 12px;
+        display: block; }
+
+  #color-swapper td.GRAY {
+    background-color: #4a4a4a; }
+  #color-swapper td.LIGHT_GRAY {
+    background-color: #E9E8E3; }
+  #color-swapper td.DARK_GRAY {
+    background-color: #3A3A3A; }
+  #color-swapper td.DARK_BLUE {
+    background-color: #363B48; }
+  #color-swapper td.FUXSIA {
+    background-color: #DF3F54; }
+  #color-swapper td.LIGHT_FUXSIA {
+    background-color: #F17C71; }
+  #color-swapper td.ZENBURN_BG {
+    background-color: #3F3F3F; }
+  #color-swapper td.LIGHT_WHITE {
+    background-color: #F3F6FB; }
+  #color-swapper td.LIGHTER_WHITE {
+    background-color: #F8F8F4; } }
+
 /*# sourceMappingURL=style.css.map */
