Basic version without colorswapper widget. WIP

--- a/webPackage/css/SASS/colors/_colors-assignations.sass
+++ b/webPackage/css/SASS/colors/_colors-assignations.sass
@@ -46,6 +46,7 @@ $light_color3: lighten($color3, $shadeCoeficient * 20%)
 
 // --------------------------------- middle intensity 
 $bg_main: $lighter_color1
+@debug $bg_main
 $text: $darkest_color1
 $text_headers: $darker_color1
 
