--- a/webPackage/css/SASS/colors/_colors-css.sass
+++ b/webPackage/css/SASS/colors/_colors-css.sass
@@ -8,79 +8,69 @@
 
 #{$theme}
   background-color: $bg_main
-
-  #main-header, 
-  // left menu and central content background need re-stating
-  .content-root,
-  .menubar,
-  .content,
-  h1, h2, h3, h4, h5, h6
-    background-color: $bg_main
-
-  // --------------------- 3 COLUMN BACKGROUND for big layout
-  @media (min-width: 1180px) 
-    .content,
-    .content-root 
-      background-color: $bg_code
-      +gradientBg($bg_code_3col, $borders1, 95%)
-
   &.big-h3
     +gradientBg($bg_main, $borders1)
-
+  // left menu and central content background need re-stating
+  #main-header,
+  .content-root,
+  .content,
+  .menubar,
+  h1, h2, h3, h4, h5, h6
+    background-color: $bg_main
+  .content-root,
+  .content
+    +respond-to($break-big_layout, min)
+      background-color: $bg_code
+      +gradientBg($bg_code_3col, $borders1, 95%)
   .content
     p, ul, ol
       background-color: $bg_main
     code
       background-color: $bg_code
-
     // ------- HIGHLIGHT JS OVERRIDE
     .hljs, pre > code
       background-color: $bg_code_3col
       +gradientBg($bg_code_3col, lighten($borders1, 20%), 70%, 80%)
-
-      @media (max-width: 1180px)
+      +respond-to($break-big_layout)
         background-color: $bg_code_3col
 
 
 // -------------------------------------------------- TEXT 
+$links_border_width: 3px
 
 #{$theme}
-
-  // ---------------------- GENERAL
-
   color: $text
 
-  
   // ----------------- ALL links
   a
     color: $text_links
     // avoid border jump
-    line-height: 17px
-    margin-top: 3px
-    margin-bottom: -3px
-
+    margin-top: $links_border_width
+    margin-bottom: -$links_border_width
     &:hover,
     &.active
-      border-bottom: 3px solid $deco_links
-
+      border-bottom: $links_border_width solid $deco_links
       &::after
         // remove dash from links
         background: none
+  // -------------- HEADER links
+  .header a
+    // avoid border jump
+    line-height: 17px
   
   // ----------- SIDE MENU links
-  .menu
-    a
-      &:visited, 
-      &:hover,
-      &.active
-        color: $text_active_links !important
-        // compensate border
-        margin-left: -3px
-        border-bottom: none !important
-        border-left: 3px solid $deco_links
+  .menu a
+    &:visited, 
+    &:hover,
+    &.active
+      color: $text_active_links !important
+      // compensate border
+      margin-left: -$links_border_width
+      border-bottom: none !important
+      border-left: $links_border_width solid $deco_links
     // make room for border-left as some flatdoc level-x links don't have
-    .level-2 > a
-      padding-left: 3px
+    &.level-2
+      padding-left: $links_border_width
   
   // --------------------------- Hi 
   h1, h2, h3, h4, h5, h6
@@ -97,7 +87,7 @@
 // ----------------------------------------------- DETAILS 
 #{$theme}
   &.big-h3
-    @include boxShadow($bg_details)
+    +boxShadow($bg_details)
   #main-header
     text-shadow: 0 1px 0 $text_details
     border-bottom: solid 1px $borders1
@@ -112,7 +102,6 @@
     h1, h2, h3
     .big-heading
       &:before
-        @include gradientBg($bg_details, $borders1)
+        +gradientBg($bg_details, $borders1)
     h4
       border-bottom: solid 1px rgba($borders1, .07)
-
