--- a/webPackage/css/SASS/fonts/_fonts-css.sass
+++ b/webPackage/css/SASS/fonts/_fonts-css.sass
@@ -17,12 +17,12 @@ $font_code: toFontList($font_code)
     font-size: $font_size_links
     font-weight: $font_weight_links
 
-  // --------------------------- Hi 
+  // --------------------------- hi 
   h1, h2, h3, h4, h5, h6
     font-family: $font_headers !important
     font-weight: $font_weight_headers !important
 
-  // --------------------------- H1 
+  // --------------------------- h1 
   h1
     font-size: $font_size_big  
     text-transform: uppercase
@@ -31,7 +31,7 @@ $font_code: toFontList($font_code)
   .content
     p
       font-size: $font_size_main
-      & > code
+      > code
         font-family: $font_code
     pre
       font-size: $font_size_code
