--- a/webPackage/css/SASS/partials/_allMixins.sass
+++ b/webPackage/css/SASS/partials/_allMixins.sass
@@ -20,6 +20,7 @@
 // POSITION
 //   %clearfix
 //   vCentered
+// MEDIA QUERIES
 
 
 // -------------------------------------------------------- BACKGROUNDS 
@@ -177,3 +178,43 @@
   position: relative
   top: $y
   +transform(translateY(-50%))
+
+// ------------------------------------------------------ MEDIA QUERIES 
+$break-smallest: 350px !default
+$break-small: 480px !default
+$break-medium: 650px !default
+// - (when side menu drops out)
+$break-side_menu: 767px !default
+$break-large: 900px !default
+$break-big_layout: 1180px !default
+
+
+=respond-to($media, $val:max) 
+  // TODO pass to @each 
+  @if $media == smallest
+    @media screen and (#{$val}-width: $break-smallest)
+      @content
+
+  @if $media == small
+    @media screen and (#{$val}-width: $break-small)
+      @content 
+    
+  @else if $media == medium 
+    @media screen and (#{$val}-width: $break-medium)
+      @content 
+
+  @else if $media == large 
+    @media screen and (#{$val}-width: $break-large)
+      @content 
+  
+  @else if $media == landscape 
+    @media screen and (#{$val}-height: $break-medium) and (orientation: landscape)
+      @content 
+  
+  @else if $media == small-height 
+    @media screen and (#{$val}-height: $break-medium) and (#{$val}-width: 700px)
+      @content 
+
+  @else if $media
+    @media screen and (#{$val}-width: $media)
+      @content
