--- a/webPackage/css/style.css
+++ b/webPackage/css/style.css
@@ -1,7 +1,4 @@
 @charset "UTF-8";
-.clearfix {
-  clear: both; }
-
 .fixed {
   position: fixed;
   z-index: 1000; }
@@ -16,49 +13,69 @@
   opacity: 0;
   font-size: 0; }
 
-.hidden {
-  display: none; }
-
 .top0 {
   top: 0; }
 
-#enjoy-mondays #main-header .left-content {
+.hidden {
+  display: none; }
+
+@media screen and (max-width: 650px) {
+  #enjoy-mondays #main-header {
+    padding-left: 0;
+    padding-right: 0; } }
+#enjoy-mondays #main-header .header-nav {
   position: relative;
   left: 220px; }
-  @media (max-width: 767px) {
-    #enjoy-mondays #main-header .left-content {
+  @media screen and (max-width: 767px) {
+    #enjoy-mondays #main-header .header-nav {
       left: 0; } }
-@media (max-width: 480px) {
-  #enjoy-mondays #main-header li {
-    margin-left: 20px; } }
-#enjoy-mondays #main-header .right-content {
+  @media screen and (max-width: 650px) {
+    #enjoy-mondays #main-header .header-nav {
+      float: none; }
+      #enjoy-mondays #main-header .header-nav h1 {
+        margin-left: 30px;
+        float: left; }
+      #enjoy-mondays #main-header .header-nav ul {
+        float: right;
+        margin-right: 30px;
+        border: none; }
+      #enjoy-mondays #main-header .header-nav li {
+        float: left;
+        border: none; }
+        #enjoy-mondays #main-header .header-nav li:last-child a {
+          padding-right: 0; } }
+    @media screen and (max-width: 650px) and (max-width: 480px) {
+      #enjoy-mondays #main-header .header-nav li {
+        margin-left: 20px; } }
+
+  @media screen and (max-width: 350px) {
+    #enjoy-mondays #main-header .header-nav {
+      text-align: center; }
+      #enjoy-mondays #main-header .header-nav h1 {
+        float: none;
+        margin: 10px auto 12px auto; }
+      #enjoy-mondays #main-header .header-nav ul {
+        float: none;
+        display: inline-block; } }
+#enjoy-mondays #main-header .github-buttons {
   float: right;
   height: 20px; }
-  @media (max-width: 900px) {
-    #enjoy-mondays #main-header .right-content {
+  @media screen and (max-width: 900px) {
+    #enjoy-mondays #main-header .github-buttons {
       width: 168px;
       height: 50px;
       top: 3px; } }
-  @media (max-width: 650px) {
-    #enjoy-mondays #main-header .right-content {
+  @media screen and (max-width: 650px) {
+    #enjoy-mondays #main-header .github-buttons {
       display: none; } }
-@media (max-width: 350px) {
-  #enjoy-mondays #main-header {
-    text-align: center; }
-    #enjoy-mondays #main-header .left-content h1 {
-      float: none;
-      margin: 10px auto 12px auto; }
-    #enjoy-mondays #main-header .left-content ul {
-      float: none;
-      display: inline-block; } }
 
 #enjoy-mondays #fix-placeholder {
   height: 51px; }
-  @media (max-width: 350px) {
+  @media screen and (max-width: 350px) {
     #enjoy-mondays #fix-placeholder {
       height: 81px; } }
 
-@media (max-width: 767px) {
+@media screen and (max-width: 767px) {
   #enjoy-mondays .content {
     padding-left: 0;
     padding-right: 0;
@@ -81,7 +98,7 @@
   #enjoy-mondays #logo img {
     width: 100%; }
 
-@media (min-width: 1180px) {
+@media screen and (min-width: 1180px) {
   #enjoy-mondays .content {
     width: 100%;
     padding-top: 0;
@@ -108,21 +125,6 @@
       padding-bottom: 40px; } }
 #enjoy-mondays {
   background-color: #dddcd4; }
-  #enjoy-mondays .content-root,
-  #enjoy-mondays .menubar,
-  #enjoy-mondays .content,
-  #enjoy-mondays h1, #enjoy-mondays h2, #enjoy-mondays h3, #enjoy-mondays h4, #enjoy-mondays h5, #enjoy-mondays h6 {
-    background-color: #dddcd4; }
-  @media (min-width: 1180px) {
-    #enjoy-mondays .content,
-    #enjoy-mondays .content-root {
-      background-color: #2b2922;
-      background: -webkit-gradient(linear, left top, right top, color-stop(0.8, #2b2922), color-stop(1, rgba(255, 255, 255, 0)));
-      background: -webkit-linear-gradient(left, #2b2922 95%, rgba(255, 255, 255, 0) 100%);
-      background: -moz-linear-gradient(left, #2b2922 95%, rgba(255, 255, 255, 0) 100%);
-      background: -o-linear-gradient(left, #2b2922 95%, rgba(255, 255, 255, 0) 100%);
-      background: -ms-linear-gradient(left, #2b2922 95%, rgba(255, 255, 255, 0) 100%);
-      background: linear-gradient(left, #2b2922 95%, rgba(255, 255, 255, 0) 100%); } }
   #enjoy-mondays.big-h3 {
     background: -webkit-gradient(linear, left top, right top, color-stop(0.8, #dddcd4), color-stop(1, rgba(255, 255, 255, 0)));
     background: -webkit-linear-gradient(left, #dddcd4 80%, rgba(255, 255, 255, 0) 100%);
@@ -130,6 +132,22 @@
     background: -o-linear-gradient(left, #dddcd4 80%, rgba(255, 255, 255, 0) 100%);
     background: -ms-linear-gradient(left, #dddcd4 80%, rgba(255, 255, 255, 0) 100%);
     background: linear-gradient(left, #dddcd4 80%, rgba(255, 255, 255, 0) 100%); }
+  #enjoy-mondays #main-header,
+  #enjoy-mondays .content-root,
+  #enjoy-mondays .content,
+  #enjoy-mondays .menubar,
+  #enjoy-mondays h1, #enjoy-mondays h2, #enjoy-mondays h3, #enjoy-mondays h4, #enjoy-mondays h5, #enjoy-mondays h6 {
+    background-color: #dddcd4; }
+  @media screen and (min-width: 1180px) {
+    #enjoy-mondays .content-root,
+    #enjoy-mondays .content {
+      background-color: #2b2922;
+      background: -webkit-gradient(linear, left top, right top, color-stop(0.8, #2b2922), color-stop(1, rgba(255, 255, 255, 0)));
+      background: -webkit-linear-gradient(left, #2b2922 95%, rgba(255, 255, 255, 0) 100%);
+      background: -moz-linear-gradient(left, #2b2922 95%, rgba(255, 255, 255, 0) 100%);
+      background: -o-linear-gradient(left, #2b2922 95%, rgba(255, 255, 255, 0) 100%);
+      background: -ms-linear-gradient(left, #2b2922 95%, rgba(255, 255, 255, 0) 100%);
+      background: linear-gradient(left, #2b2922 95%, rgba(255, 255, 255, 0) 100%); } }
   #enjoy-mondays .content p, #enjoy-mondays .content ul, #enjoy-mondays .content ol {
     background-color: #dddcd4; }
   #enjoy-mondays .content code {
@@ -142,7 +160,7 @@
     background: -o-linear-gradient(left, #2b2922 70%, rgba(255, 255, 255, 0) 80%);
     background: -ms-linear-gradient(left, #2b2922 70%, rgba(255, 255, 255, 0) 80%);
     background: linear-gradient(left, #2b2922 70%, rgba(255, 255, 255, 0) 80%); }
-    @media (max-width: 1180px) {
+    @media screen and (max-width: 1180px) {
       #enjoy-mondays .content .hljs, #enjoy-mondays .content pre > code {
         background-color: #2b2922; } }
 
@@ -150,19 +168,20 @@
   color: black; }
   #enjoy-mondays a {
     color: #70758f;
-    line-height: 17px;
     margin-top: 3px;
     margin-bottom: -3px; }
     #enjoy-mondays a:hover, #enjoy-mondays a.active {
       border-bottom: 3px solid #f50a31; }
       #enjoy-mondays a:hover::after, #enjoy-mondays a.active::after {
         background: none; }
+  #enjoy-mondays .header a {
+    line-height: 17px; }
   #enjoy-mondays .menu a:visited, #enjoy-mondays .menu a:hover, #enjoy-mondays .menu a.active {
     color: #93061e !important;
     margin-left: -3px;
     border-bottom: none !important;
     border-left: 3px solid #f50a31; }
-  #enjoy-mondays .menu .level-2 > a {
+  #enjoy-mondays .menu a.level-2 {
     padding-left: 3px; }
   #enjoy-mondays h1, #enjoy-mondays h2, #enjoy-mondays h3, #enjoy-mondays h4, #enjoy-mondays h5, #enjoy-mondays h6 {
     color: #2b2922; }
@@ -212,48 +231,5 @@
       font-family: ‘Courier, New’, Courier, monospace; }
   #enjoy-mondays .content pre {
     font-size: 1.15em; }
-
-#color-swapper {
-  display: none; }
-
-@media (min-width: 767px) {
-  #color-swapper {
-    display: initial;
-    left: 0;
-    padding: 5px; }
-    #color-swapper tr {
-      height: 15px;
-      overflow: hidden; }
-      #color-swapper tr:hover {
-        height: 12px;
-        cursor: pointer; }
-    #color-swapper td {
-      font-size: 0;
-      line-height: 0;
-      width: 27px;
-      border-right: 1px solid white; }
-      #color-swapper td a {
-        width: 27px;
-        height: 12px;
-        display: block; }
-
-  #color-swapper td.GRAY {
-    background-color: #4a4a4a; }
-  #color-swapper td.LIGHT_GRAY {
-    background-color: #E9E8E3; }
-  #color-swapper td.DARK_GRAY {
-    background-color: #3A3A3A; }
-  #color-swapper td.DARK_BLUE {
-    background-color: #363B48; }
-  #color-swapper td.FUXSIA {
-    background-color: #DF3F54; }
-  #color-swapper td.LIGHT_FUXSIA {
-    background-color: #F17C71; }
-  #color-swapper td.ZENBURN_BG {
-    background-color: #3F3F3F; }
-  #color-swapper td.LIGHT_WHITE {
-    background-color: #F3F6FB; }
-  #color-swapper td.LIGHTER_WHITE {
-    background-color: #F8F8F4; } }
 
 /*# sourceMappingURL=style.css.map */
