--- a/webPackage/css/SASS/fonts/_fonts-css.sass
+++ b/webPackage/css/SASS/fonts/_fonts-css.sass
@@ -19,8 +19,8 @@ $font_code: toFontList($font_code)
 
   // --------------------------- hi 
   h1, h2, h3, h4, h5, h6
-    font-family: $font_headers !important
-    font-weight: $font_weight_headers !important
+    font-family: $font_headers
+    font-weight: $font_weight_headers
 
   // --------------------------- h1 
   h1
