small clean up.

--- a/webPackage/css/SASS/layouts/_layout-defaultSettings.sass
+++ b/webPackage/css/SASS/layouts/_layout-defaultSettings.sass
@@ -1,19 +1,9 @@
-
-// ------------------------------------------- THEME
-// has to be updated in index.html
-
 $theme: #enjoy-mondays !default
-
-// ---------------------------------------- MEASURES
 $header_height: 20px !default
-// (flatdoc theme includes 15px padding top and bottom, +1px border-bottom)
-
-// under 350px:
 $header_height_2: 50px !default
-
 $logo_footer_width: 28px !default
-
-
+$FLATDOC_CONTENT_WIDTH: 550px !default
+$content_width: $FLATDOC_CONTENT_WIDTH !default
 // USED in placeholder height
 $h: $header_height + 31 !default
 $h_2: $header_height_2 + 31 !default
