--- a/webPackage/css/SASS/partials/_classes.sass
+++ b/webPackage/css/SASS/partials/_classes.sass
@@ -1,19 +1,14 @@
-.fixed
+.fixedTop
   position: fixed
   z-index: 1000
-
+  top: 0
 .fullwidth
   width: 100%
-
 .screan-reader-text
   position: absolute
   height: 0
   width: 0
   opacity: 0
   font-size: 0
-
-.top0
-  top: 0
-
 .hidden
   display: none
