--- a/webPackage/css/SASS/settings/_settings.sass
+++ b/webPackage/css/SASS/settings/_settings.sass
@@ -28,20 +28,23 @@
 // -------------------------------------------------
 // ------------------------------------------ LAYOUT
   // --------------------------- THEME
+  // has to be updated in index.html
   $theme: #enjoy-mondays
 
   // ------------------------ MEASURES
-  // HEADER
-  // total heights will be adding 31px
+  // HEADER - total heights will be adding 31px
+  // over 350px
   $header_height: 20px
 
-  // HEADER under 350px:
+  // under 350px:
   $header_height_2: 50px
 
   // LOGO
   $logo_footer_width: 28px
 
-
+  // CONTENT (3 col big layout)
+  $FLATDOC_CONTENT_WIDTH: 550px
+  $content_width: $FLATDOC_CONTENT_WIDTH
 // -------------------------------------------------
 // ------------------------------------------ COLORS
   // ---------------------- BASE COLOR
@@ -75,7 +78,7 @@
 
 // -------------------------------------------------
 // ------------------------------------------- FONTS
-// can pick constants from fonts/_fontConst.scss
+// can pick constants from fonts/_fontConst.sass
   // -------------------------- FAMILY
   // LINKS AND TEXT
   $font_main: $TAHOMA, $TIMES, $COURIER
