--- a/webPackage/css/style.css
+++ b/webPackage/css/style.css
@@ -1,7 +1,8 @@
 @charset "UTF-8";
-.fixed {
+.fixedTop {
   position: fixed;
-  z-index: 1000; }
+  z-index: 1000;
+  top: 0; }
 
 .fullwidth {
   width: 100%; }
@@ -12,9 +13,6 @@
   width: 0;
   opacity: 0;
   font-size: 0; }
-
-.top0 {
-  top: 0; }
 
 .hidden {
   display: none; }
